--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -1,46 +1,74 @@
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
-body{
-    margin: 0px;
+body {
+  margin: 0px;
 }
 
 .container {
-    margin: 0 auto;
-    width: 1000px;
+  margin: 0 auto;
+  width: 1000px;
 }
 
-.main-header{
-    background-color: #F49D1A;
+.main-header {
+  background-color: #f49d1a;
+  padding: 10px 20px;
 }
 
-.header-title{
-    font-size: 35px !important; 
+.header-title {
+  font-size: 35px !important;
 }
 
-.main-header a{
-    color: #DC3535;
-    font-size: 25px;
-    text-decoration: none;
-    font-family: 'Raleway', sans-serif;
-    font-weight: bolder;
-    text-shadow:  0px 3px 8px  #FFE15D;
+.main-header a {
+  color: #dc3535;
+  font-size: 25px;
+  text-decoration: none;
+  font-family: "Raleway", sans-serif;
+  font-weight: bolder;
+  text-shadow: 0px 3px 8px #ffe15d;
 }
 
-.main-header a:hover{
-    color: rgb(255, 255, 255);
-    text-shadow: 0px 3px 8px #000;
+.main-header a:hover {
+  color: rgb(255, 255, 255);
+  text-shadow: 0px 3px 8px #000;
 }
 
-.main-nav{
-    display: inline-block;
-    width: calc(100% - 80px);
-    text-align: right;
+.main-nav {
+  display: inline-block;
+  width: calc(100% - 80px);
+  text-align: right;
 }
 
-.main-nav__item{
-    display: inline-block;
-    margin-left: 20px;
-    padding: 8px;
+.main-nav__item {
+  display: inline-block;
+  margin-left: 20px;
+  padding: 8px;
+}
+
+#showcase {
+background: url(../HTML/pic/zflix-background.jpg);
+  width: 100%;
+  height: 70vh;
+}
+
+#showcase .content {
+  /* relative -> it'll be aligned by
+    the element one above */
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.6);
+  margin-left: 20px;
+  color: #fff;
+  top: 10%;
+  width: 100vh;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+#showcase .content h1 {
+  font-size: 60px;
+  margin: 0px;
+}
+
+#showcase .content p {
+  font-size: 25px;
 }
