--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -56,7 +56,7 @@ background: url(../HTML/pic/zflix-background.jpg);
   /* relative -> it'll be aligned by
     the element one above */
   position: relative;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rba(0, 0, 0, 0.6);
   margin-left: 20px;
   color: #fff;
   top: 10%;
