--- a/CSS/Login.css
+++ b/CSS/Login.css
@@ -27,6 +27,8 @@
     transform: translate(-50%, -50%);
     background-color: #fff;
     padding: 5px;
+    border-radius: 30px;
+    overflow: hidden; /* hides 2nd form*/
 }
 
 .button-box{
@@ -113,4 +115,11 @@ span{
     font-size: 12px;
     bottom: 63px;
     position: absolute;
+}
+
+#login{
+    left: 50px;
+}
+#register{
+    left: 450px;
 }
