--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -24,23 +24,21 @@ main {
   margin-top: 65px;
 }
 
-.section-title{
+.section-title {
   text-align: center;
   margin-bottom: 20px;
   color: #14274e;
   font-size: 30px;
   font-weight: bold;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-}
+  font-family: 'Poppins', sans-serif;}
 
-.section-content{
+.section-content {
   text-align: center;
   margin-bottom: 20px;
   color: #14274e;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: bold;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
- }
+  font-family: 'Poppins', sans-serif;}
 
 .row {
   width: 100%;
@@ -125,8 +123,7 @@ main {
   color: #fff;
   top: 10%;
   width: 100vh;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-}
+  font-family: 'Poppins', sans-serif;}
 
 #showcase .content h1 {
   font-size: 60px;
@@ -160,26 +157,36 @@ main {
   cursor: pointer;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
     rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
-.card:hover{
+.card:hover {
   transform: translateY(-10px);
 }
 
-.card-image{
+.card-image {
   max-height: 350px;
 }
 
-.card-body{
+.card-body {
   padding: 10px 30px;
+  text-align: center;
+  margin-bottom: 20px;
+  color: #14274e;
+  font-family: 'Poppins', sans-serif;}
+
+.card-body h2 {
+  font-size: 22px;
+  font-weight: bold;
 }
 
-.card-body p{
+.card-body p {
+  font-weight: 500;
+  font-size: 15px;
   word-break: break-all;
 }
 
-.img-fluid{
+.img-fluid {
   /* make it  inactive and see, pics 
   will overflow.
   
