--- a/CSS/Button.css
+++ b/CSS/Button.css
@@ -28,3 +28,14 @@
     color: #f1f6f9;
     background-color: #9ba4b4;
 }
+
+.btn-movies{
+    padding: 10px 16px;
+    background-color: #14274E;
+    color: #9ba4b4;
+}
+
+.btn-movies:hover{
+    background-color: #394867;
+    color: #f1f6f9;
+}
