--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -30,7 +30,8 @@ main {
   color: #14274e;
   font-size: 30px;
   font-weight: bold;
-  font-family: 'Poppins', sans-serif;}
+  font-family: "Poppins", sans-serif;
+}
 
 .section-content {
   text-align: center;
@@ -38,7 +39,8 @@ main {
   color: #14274e;
   font-size: 18px;
   font-weight: bold;
-  font-family: 'Poppins', sans-serif;}
+  font-family: "Poppins", sans-serif;
+}
 
 .row {
   width: 100%;
@@ -46,13 +48,13 @@ main {
   text-align: center;
 }
 
-.row::after{
+.row::after {
   content: "";
   display: block;
   clear: both;
 }
 
-.col-2{
+.col-2 {
   float: left;
   width: 50%;
 }
@@ -139,7 +141,8 @@ main {
   color: #fff;
   top: 5%;
   width: 100vh;
-  font-family: 'Poppins', sans-serif;}
+  font-family: "Poppins", sans-serif;
+}
 
 #showcase .content h1 {
   font-size: 60px;
@@ -150,17 +153,15 @@ main {
   font-size: 25px;
 }
 
-
 /* 
 ! FEATURED MOVIES
  */
 
- #movies{
-
+#movies {
   /* you have to set height,
   otherwise sections intertwine*/
-  height: 85vh; 
- }
+  height: 85vh;
+}
 
 .card-container {
   /* If you give padding inside .card-container,
@@ -193,7 +194,8 @@ main {
   text-align: center;
   margin-bottom: 20px;
   color: #14274e;
-  font-family: 'Poppins', sans-serif;}
+  font-family: "Poppins", sans-serif;
+}
 
 .card-body p {
   margin-top: 0;
@@ -201,14 +203,13 @@ main {
   font-size: 15px;
 }
 
-.movie-name{
+.movie-name {
   font-size: 18px;
   font-weight: bold;
   height: 80px;
 }
 
-.movie-subject{
-
+.movie-subject {
   /* Makes the subjects of all movies the
   same height  */
   height: 150px;
@@ -222,15 +223,38 @@ main {
   width: 100%;
 }
 
-
 /* 
 ! UPCOMING SHOWS
  */
 
-#upcoming-shows{
+#upcoming-shows {
   height: 85vh;
 }
 
+.upcoming-card-container {
+  padding: 10px;
+  
+}
+
+.upcoming-card {
+  height: 360px;
+  background-color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  transition: all 0.3s;
+}
+
+.upcoming-card:hover{
+  transform: translateY(-10px);
+}
+
+.upcoming-card-body{
+  text-align: center;
+  color: #14274e;
+  font-family: "Poppins", sans-serif;
+}
 
 /* 
 ! BACK TO TOP
